--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ footer a {
 
 <!-- Repetir sessões com 6 alunos -->
 <section class="estudante">
-    <h2 class="estudante_titulo">Destaques da Turma ADS 1CDS</h2>
+    <h2 class="estudante_titulo">Destaques da Turma ADS 2CDS</h2>
     <div class="estudantes_todos">
         <div class="estudante-div">
             <img class="estudante-imagem" src="aluno1.png" alt="Aluno 1">
@@ -164,6 +164,41 @@ footer a {
             <img class="estudante-icone" src="facebook.png" alt="Facebook">
         </div>
     </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <h3 class="estudante-nome">Aluno 7</h3>
+            <img class="estudante-icone" src="instagram.png" alt="Instagram">
+            <img class="estudante-icone" src="facebook.png" alt="Facebook">
+        </div>
+     </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <h3 class="estudante-nome">Aluno 8</h3>
+            <img class="estudante-icone" src="instagram.png" alt="Instagram">
+            <img class="estudante-icone" src="facebook.png" alt="Facebook">
+        </div>
+     </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <h3 class="estudante-nome">Aluno 9</h3>
+            <img class="estudante-icone" src="instagram.png" alt="Instagram">
+            <img class="estudante-icone" src="facebook.png" alt="Facebook">
+        </div>
+     </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <h3 class="estudante-nome">Aluno 10</h3>
+            <img class="estudante-icone" src="instagram.png" alt="Instagram">
+            <img class="estudante-icone" src="facebook.png" alt="Facebook">
+        </div>
+     </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <h3 class="estudante-nome">Aluno 11</h3>
+            <img class="estudante-icone" src="instagram.png" alt="Instagram">
+            <img class="estudante-icone" src="facebook.png" alt="Facebook">
+        </div>
+
 </section>
 
 <!-- Carrossel -->
