--- a/index.html
+++ b/index.html
@@ -198,7 +198,204 @@ footer a {
             <img class="estudante-icone" src="instagram.png" alt="Instagram">
             <img class="estudante-icone" src="facebook.png" alt="Facebook">
         </div>
-
+     <div class="estudante-div">
+            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <h3 class="estudante-nome">Aluno 12</h3>
+            <img class="estudante-icone" src="instagram.png" alt="Instagram">
+            <img class="estudante-icone" src="facebook.png" alt="Facebook">
+        </div>
+     <div class="estudante-div">
+            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <h3 class="estudante-nome">Aluno 13</h3>
+            <img class="estudante-icone" src="instagram.png" alt="Instagram">
+            <img class="estudante-icone" src="facebook.png" alt="Facebook">
+        </div>
+     <div class="estudante-div">
+            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <h3 class="estudante-nome">Aluno 14</h3>
+            <img class="estudante-icone" src="instagram.png" alt="Instagram">
+            <img class="estudante-icone" src="facebook.png" alt="Facebook">
+        </div>
+     <div class="estudante-div">
+            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <h3 class="estudante-nome">Aluno 15</h3>
+            <img class="estudante-icone" src="instagram.png" alt="Instagram">
+            <img class="estudante-icone" src="facebook.png" alt="Facebook">
+        </div>
+     <div class="estudante-div">
+            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <h3 class="estudante-nome">Aluno 16</h3>
+            <img class="estudante-icone" src="instagram.png" alt="Instagram">
+            <img class="estudante-icone" src="facebook.png" alt="Facebook">
+        </div>
+ <div class="estudante-div">
+            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <h3 class="estudante-nome">Aluno 17</h3>
+            <img class="estudante-icone" src="instagram.png" alt="Instagram">
+            <img class="estudante-icone" src="facebook.png" alt="Facebook">
+        </div>
+     <div class="estudante-div">
+            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <h3 class="estudante-nome">Aluno 18</h3>
+            <img class="estudante-icone" src="instagram.png" alt="Instagram">
+            <img class="estudante-icone" src="facebook.png" alt="Facebook">
+        </div>
+     <div class="estudante-div">
+            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <h3 class="estudante-nome">Aluno 19</h3>
+            <img class="estudante-icone" src="instagram.png" alt="Instagram">
+            <img class="estudante-icone" src="facebook.png" alt="Facebook">
+        </div>
+     <div class="estudante-div">
+            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <h3 class="estudante-nome">Aluno 20</h3>
+            <img class="estudante-icone" src="instagram.png" alt="Instagram">
+            <img class="estudante-icone" src="facebook.png" alt="Facebook">
+        </div>
+     <div class="estudante-div">
+            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <h3 class="estudante-nome">Aluno 21</h3>
+            <img class="estudante-icone" src="instagram.png" alt="Instagram">
+            <img class="estudante-icone" src="facebook.png" alt="Facebook">
+        </div>
+     <div class="estudante-div">
+            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <h3 class="estudante-nome">Aluno 22</h3>
+            <img class="estudante-icone" src="instagram.png" alt="Instagram">
+            <img class="estudante-icone" src="facebook.png" alt="Facebook">
+        </div>
+     <div class="estudante-div">
+            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <h3 class="estudante-nome">Aluno 23</h3>
+            <img class="estudante-icone" src="instagram.png" alt="Instagram">
+            <img class="estudante-icone" src="facebook.png" alt="Facebook">
+        </div>
+     <div class="estudante-div">
+            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <h3 class="estudante-nome">Aluno 24</h3>
+            <img class="estudante-icone" src="instagram.png" alt="Instagram">
+            <img class="estudante-icone" src="facebook.png" alt="Facebook">
+        </div>
+     <div class="estudante-div">
+            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <h3 class="estudante-nome">Aluno 25</h3>
+            <img class="estudante-icone" src="instagram.png" alt="Instagram">
+            <img class="estudante-icone" src="facebook.png" alt="Facebook">
+        </div>
+     <div class="estudante-div">
+            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <h3 class="estudante-nome">Aluno 26</h3>
+            <img class="estudante-icone" src="instagram.png" alt="Instagram">
+            <img class="estudante-icone" src="facebook.png" alt="Facebook">
+        </div>
+     <div class="estudante-div">
+            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <h3 class="estudante-nome">Aluno 27</h3>
+            <img class="estudante-icone" src="instagram.png" alt="Instagram">
+            <img class="estudante-icone" src="facebook.png" alt="Facebook">
+        </div>
+     <div class="estudante-div">
+            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <h3 class="estudante-nome">Aluno 28</h3>
+            <img class="estudante-icone" src="instagram.png" alt="Instagram">
+            <img class="estudante-icone" src="facebook.png" alt="Facebook">
+        </div>
+     <div class="estudante-div">
+            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <h3 class="estudante-nome">Aluno 29</h3>
+            <img class="estudante-icone" src="instagram.png" alt="Instagram">
+            <img class="estudante-icone" src="facebook.png" alt="Facebook">
+        </div>
+     <div class="estudante-div">
+            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <h3 class="estudante-nome">Aluno 30</h3>
+            <img class="estudante-icone" src="instagram.png" alt="Instagram">
+            <img class="estudante-icone" src="facebook.png" alt="Facebook">
+        </div>
+     <div class="estudante-div">
+            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <h3 class="estudante-nome">Aluno 31</h3>
+            <img class="estudante-icone" src="instagram.png" alt="Instagram">
+            <img class="estudante-icone" src="facebook.png" alt="Facebook">
+        </div>
+     <div class="estudante-div">
+            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <h3 class="estudante-nome">Aluno 32</h3>
+            <img class="estudante-icone" src="instagram.png" alt="Instagram">
+            <img class="estudante-icone" src="facebook.png" alt="Facebook">
+        </div>
+     <div class="estudante-div">
+            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <h3 class="estudante-nome">Aluno 33</h3>
+            <img class="estudante-icone" src="instagram.png" alt="Instagram">
+            <img class="estudante-icone" src="facebook.png" alt="Facebook">
+        </div>
+     <div class="estudante-div">
+            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <h3 class="estudante-nome">Aluno 11</h3>
+            <img class="estudante-icone" src="instagram.png" alt="Instagram">
+            <img class="estudante-icone" src="facebook.png" alt="Facebook">
+        </div>
+     <div class="estudante-div">
+            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <h3 class="estudante-nome">Aluno 11</h3>
+            <img class="estudante-icone" src="instagram.png" alt="Instagram">
+            <img class="estudante-icone" src="facebook.png" alt="Facebook">
+        </div>
+     <div class="estudante-div">
+            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <h3 class="estudante-nome">Aluno 11</h3>
+            <img class="estudante-icone" src="instagram.png" alt="Instagram">
+            <img class="estudante-icone" src="facebook.png" alt="Facebook">
+        </div>
+     <div class="estudante-div">
+            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <h3 class="estudante-nome">Aluno 11</h3>
+            <img class="estudante-icone" src="instagram.png" alt="Instagram">
+            <img class="estudante-icone" src="facebook.png" alt="Facebook">
+        </div>
+     <div class="estudante-div">
+            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <h3 class="estudante-nome">Aluno 11</h3>
+            <img class="estudante-icone" src="instagram.png" alt="Instagram">
+            <img class="estudante-icone" src="facebook.png" alt="Facebook">
+        </div>
+     <div class="estudante-div">
+            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <h3 class="estudante-nome">Aluno 11</h3>
+            <img class="estudante-icone" src="instagram.png" alt="Instagram">
+            <img class="estudante-icone" src="facebook.png" alt="Facebook">
+        </div>
+     <div class="estudante-div">
+            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <h3 class="estudante-nome">Aluno 11</h3>
+            <img class="estudante-icone" src="instagram.png" alt="Instagram">
+            <img class="estudante-icone" src="facebook.png" alt="Facebook">
+        </div>
+     <div class="estudante-div">
+            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <h3 class="estudante-nome">Aluno 11</h3>
+            <img class="estudante-icone" src="instagram.png" alt="Instagram">
+            <img class="estudante-icone" src="facebook.png" alt="Facebook">
+        </div>
+     <div class="estudante-div">
+            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <h3 class="estudante-nome">Aluno 11</h3>
+            <img class="estudante-icone" src="instagram.png" alt="Instagram">
+            <img class="estudante-icone" src="facebook.png" alt="Facebook">
+        </div>
+ <div class="estudante-div">
+            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <h3 class="estudante-nome">Aluno 11</h3>
+            <img class="estudante-icone" src="instagram.png" alt="Instagram">
+            <img class="estudante-icone" src="facebook.png" alt="Facebook">
+        </div>
+     <div class="estudante-div">
+            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <h3 class="estudante-nome">Aluno 11</h3>
+            <img class="estudante-icone" src="instagram.png" alt="Instagram">
+            <img class="estudante-icone" src="facebook.png" alt="Facebook">
+        </div>
 </section>
 
 <!-- Carrossel -->
