--- a/index.html
+++ b/index.html
@@ -128,44 +128,44 @@ footer a {
     <h2 class="estudante_titulo">Destaques da Turma ADS 2CDS</h2>
     <div class="estudantes_todos">
         <div class="estudante-div">
-            <img class="estudante-imagem" src="aluno1.png" alt="Aluno 1">
+            <img class="estudante-imagem" src="alfeu.jpg" alt="Aluno 1">
             <h3 class="estudante-nome">Aluno 1</h3>
             <img class="estudante-icone" src="instagram.png" alt="Instagram">
             <img class="estudante-icone" src="facebook.png" alt="Facebook">
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="aluno2.png" alt="Aluno 2">
+            <img class="estudante-imagem" src="andre.jpg" alt="Aluno 2">
             <h3 class="estudante-nome">Aluno 2</h3>
             <img class="estudante-icone" src="instagram.png" alt="Instagram">
             <img class="estudante-icone" src="facebook.png" alt="Facebook">
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="aluno3.png" alt="Aluno 3">
+            <img class="estudante-imagem" src="bruno.jpg" alt="Aluno 3">
             <h3 class="estudante-nome">Aluno 3</h3>
             <img class="estudante-icone" src="instagram.png" alt="Instagram">
             <img class="estudante-icone" src="facebook.png" alt="Facebook">
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="aluno4.png" alt="Aluno 4">
+            <img class="estudante-imagem" src="chistofer.jpg" alt="Aluno 4">
             <h3 class="estudante-nome">Aluno 4</h3>
             <img class="estudante-icone" src="instagram.png" alt="Instagram">
             <img class="estudante-icone" src="facebook.png" alt="Facebook">
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="aluno5.png" alt="Aluno 5">
+            <img class="estudante-imagem" src="emanuelle.jpg" alt="Aluno 5">
             <h3 class="estudante-nome">Aluno 5</h3>
             <img class="estudante-icone" src="instagram.png" alt="Instagram">
             <img class="estudante-icone" src="facebook.png" alt="Facebook">
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <img class="estudante-imagem" src="estefany.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 6</h3>
             <img class="estudante-icone" src="instagram.png" alt="Instagram">
             <img class="estudante-icone" src="facebook.png" alt="Facebook">
         </div>
     </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <img class="estudante-imagem" src="gabriel.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 7</h3>
             <img class="estudante-icone" src="instagram.png" alt="Instagram">
             <img class="estudante-icone" src="facebook.png" alt="Facebook">
@@ -179,39 +179,39 @@ footer a {
         </div>
      </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <img class="estudante-imagem" src="gian.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 9</h3>
             <img class="estudante-icone" src="instagram.png" alt="Instagram">
             <img class="estudante-icone" src="facebook.png" alt="Facebook">
         </div>
      </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <img class="estudante-imagem" src="joãocleberson.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 10</h3>
             <img class="estudante-icone" src="instagram.png" alt="Instagram">
             <img class="estudante-icone" src="facebook.png" alt="Facebook">
         </div>
      </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <img class="estudante-imagem" src="joãomozer.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 11</h3>
             <img class="estudante-icone" src="instagram.png" alt="Instagram">
             <img class="estudante-icone" src="facebook.png" alt="Facebook">
         </div>
      <div class="estudante-div">
-            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <img class="estudante-imagem" src="julia.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 12</h3>
             <img class="estudante-icone" src="instagram.png" alt="Instagram">
             <img class="estudante-icone" src="facebook.png" alt="Facebook">
         </div>
      <div class="estudante-div">
-            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <img class="estudante-imagem" src="julio.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 13</h3>
             <img class="estudante-icone" src="instagram.png" alt="Instagram">
             <img class="estudante-icone" src="facebook.png" alt="Facebook">
         </div>
      <div class="estudante-div">
-            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <img class="estudante-imagem" src="leticia.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 14</h3>
             <img class="estudante-icone" src="instagram.png" alt="Instagram">
             <img class="estudante-icone" src="facebook.png" alt="Facebook">
@@ -223,173 +223,148 @@ footer a {
             <img class="estudante-icone" src="facebook.png" alt="Facebook">
         </div>
      <div class="estudante-div">
-            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <img class="estudante-imagem" src="marcus.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 16</h3>
             <img class="estudante-icone" src="instagram.png" alt="Instagram">
             <img class="estudante-icone" src="facebook.png" alt="Facebook">
         </div>
  <div class="estudante-div">
-            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <img class="estudante-imagem" src="maria.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 17</h3>
             <img class="estudante-icone" src="instagram.png" alt="Instagram">
             <img class="estudante-icone" src="facebook.png" alt="Facebook">
         </div>
      <div class="estudante-div">
-            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <img class="estudante-imagem" src="marialuiza.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 18</h3>
             <img class="estudante-icone" src="instagram.png" alt="Instagram">
             <img class="estudante-icone" src="facebook.png" alt="Facebook">
         </div>
      <div class="estudante-div">
-            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <img class="estudante-imagem" src="matheus.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 19</h3>
             <img class="estudante-icone" src="instagram.png" alt="Instagram">
             <img class="estudante-icone" src="facebook.png" alt="Facebook">
         </div>
      <div class="estudante-div">
-            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <img class="estudante-imagem" src="mattheus.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 20</h3>
             <img class="estudante-icone" src="instagram.png" alt="Instagram">
             <img class="estudante-icone" src="facebook.png" alt="Facebook">
         </div>
      <div class="estudante-div">
-            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <img class="estudante-imagem" src="mayra.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 21</h3>
             <img class="estudante-icone" src="instagram.png" alt="Instagram">
             <img class="estudante-icone" src="facebook.png" alt="Facebook">
         </div>
      <div class="estudante-div">
-            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <img class="estudante-imagem" src="milena.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 22</h3>
             <img class="estudante-icone" src="instagram.png" alt="Instagram">
             <img class="estudante-icone" src="facebook.png" alt="Facebook">
         </div>
      <div class="estudante-div">
-            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <img class="estudante-imagem" src="michel.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 23</h3>
             <img class="estudante-icone" src="instagram.png" alt="Instagram">
             <img class="estudante-icone" src="facebook.png" alt="Facebook">
         </div>
      <div class="estudante-div">
-            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <img class="estudante-imagem" src="nicolly.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 24</h3>
             <img class="estudante-icone" src="instagram.png" alt="Instagram">
             <img class="estudante-icone" src="facebook.png" alt="Facebook">
         </div>
      <div class="estudante-div">
-            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <img class="estudante-imagem" src="paulo.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 25</h3>
             <img class="estudante-icone" src="instagram.png" alt="Instagram">
             <img class="estudante-icone" src="facebook.png" alt="Facebook">
         </div>
      <div class="estudante-div">
-            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <img class="estudante-imagem" src="ramon.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 26</h3>
             <img class="estudante-icone" src="instagram.png" alt="Instagram">
             <img class="estudante-icone" src="facebook.png" alt="Facebook">
         </div>
      <div class="estudante-div">
-            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <img class="estudante-imagem" src="raul.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 27</h3>
             <img class="estudante-icone" src="instagram.png" alt="Instagram">
             <img class="estudante-icone" src="facebook.png" alt="Facebook">
         </div>
      <div class="estudante-div">
-            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <img class="estudante-imagem" src="rebecca.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 28</h3>
             <img class="estudante-icone" src="instagram.png" alt="Instagram">
             <img class="estudante-icone" src="facebook.png" alt="Facebook">
         </div>
      <div class="estudante-div">
-            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <img class="estudante-imagem" src="richard.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 29</h3>
             <img class="estudante-icone" src="instagram.png" alt="Instagram">
             <img class="estudante-icone" src="facebook.png" alt="Facebook">
         </div>
      <div class="estudante-div">
-            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <img class="estudante-imagem" src="samuel.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 30</h3>
             <img class="estudante-icone" src="instagram.png" alt="Instagram">
             <img class="estudante-icone" src="facebook.png" alt="Facebook">
         </div>
      <div class="estudante-div">
-            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <img class="estudante-imagem" src="sophia.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 31</h3>
             <img class="estudante-icone" src="instagram.png" alt="Instagram">
             <img class="estudante-icone" src="facebook.png" alt="Facebook">
         </div>
      <div class="estudante-div">
-            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <img class="estudante-imagem" src="alex.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 32</h3>
             <img class="estudante-icone" src="instagram.png" alt="Instagram">
             <img class="estudante-icone" src="facebook.png" alt="Facebook">
         </div>
      <div class="estudante-div">
-            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <img class="estudante-imagem" src="thayna.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 33</h3>
             <img class="estudante-icone" src="instagram.png" alt="Instagram">
             <img class="estudante-icone" src="facebook.png" alt="Facebook">
         </div>
      <div class="estudante-div">
-            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <img class="estudante-imagem" src="vicente.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 34</h3>
             <img class="estudante-icone" src="instagram.png" alt="Instagram">
             <img class="estudante-icone" src="facebook.png" alt="Facebook">
         </div>
      <div class="estudante-div">
-            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <img class="estudante-imagem" src="victor.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 35</h3>
             <img class="estudante-icone" src="instagram.png" alt="Instagram">
             <img class="estudante-icone" src="facebook.png" alt="Facebook">
         </div>
      <div class="estudante-div">
-            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <img class="estudante-imagem" src="vinicius.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 36</h3>
             <img class="estudante-icone" src="instagram.png" alt="Instagram">
             <img class="estudante-icone" src="facebook.png" alt="Facebook">
         </div>
      <div class="estudante-div">
-            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <img class="estudante-imagem" src="wevergton.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 37</h3>
-            <img class="estudante-icone" src="instagram.png" alt="Instagram">
-            <img class="estudante-icone" src="facebook.png" alt="Facebook">
+            <img class="estudante-icone" src="instagram (1).png" alt="Instagram">
+            <img class="estudante-icone" src="facebook (1).png" alt="Facebook">
         </div>
-     <div class="estudante-div">
-            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
-            <h3 class="estudante-nome">Aluno 38</h3>
-            <img class="estudante-icone" src="instagram.png" alt="Instagram">
-            <img class="estudante-icone" src="facebook.png" alt="Facebook">
-        </div>
-     <div class="estudante-div">
-            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
-            <h3 class="estudante-nome">Aluno 39</h3>
-            <img class="estudante-icone" src="instagram.png" alt="Instagram">
-            <img class="estudante-icone" src="facebook.png" alt="Facebook">
-        </div>
-     <div class="estudante-div">
-            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
-            <h3 class="estudante-nome">Aluno 40</h3>
-            <img class="estudante-icone" src="instagram.png" alt="Instagram">
-            <img class="estudante-icone" src="facebook.png" alt="Facebook">
-        </div>
-     <div class="estudante-div">
-            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
-            <h3 class="estudante-nome">Aluno 41</h3>
-            <img class="estudante-icone" src="instagram.png" alt="Instagram">
-            <img class="estudante-icone" src="facebook.png" alt="Facebook">
-        </div>
-</section>
-
+     
 <!-- Carrossel -->
 <div class="carousel">
-    <img src="turma1.jpg" class="active" alt="Foto da turma 1">
-    <img src="turma2.jpg" alt="Foto da turma 2">
+    <img src="foto da turma.jpg" class="active" alt="Foto da turma 1">
+    <img src="fotodaturma.jpg" alt="Foto da turma 2">
     <button class="prev">&#10094;</button>
     <button class="next">&#10095;</button>
 </div>
 
 <footer>
-    <p>©2025 | Turma ADS 2CDS | Unidos e vencedores!</p>
+    <p>©2025 | Turma 2CDS | Unidos e vencedores!</p>
     <p>Contato: <a href="https://wa.me/5541999999999">Whatsapp da turma</a></p>
 </footer>
 
