--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ footer a {
 
 <!-- Repetir sessões com 6 alunos -->
 <section class="estudante">
-    <h2 class="estudante_titulo">Destaques da Turma ADS 2CDS</h2>
+    <h2 class="estudante_titulo">Destaques da Turma 2CDS</h2>
     <div class="estudantes_todos">
         <div class="estudante-div">
             <img class="estudante-imagem" src="alfeu.jpg" alt="Aluno 1">
