--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@ footer a {
             <img class="estudante-icone" src="facebook (1).png" alt="Facebook">
         </div>
     </div>
+    <!-- Repetir sessões com 6 alunos -->
         <div class="estudante-div">
             <img class="estudante-imagem" src="gabriel.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 7</h3>
@@ -211,6 +212,7 @@ footer a {
             <img class="estudante-icone" src="instagram (1).png" alt="Instagram">
             <img class="estudante-icone" src="facebook (1).png" alt="Facebook">
         </div>
+    <!-- Repetir sessões com 6 alunos -->
      <div class="estudante-div">
             <img class="estudante-imagem" src="julio.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 13</h3>
@@ -253,6 +255,7 @@ footer a {
             <img class="estudante-icone" src="instagram (1).png" alt="Instagram">
             <img class="estudante-icone" src="facebook (1).png" alt="Facebook">
         </div>
+    <!-- Repetir sessões com 6 alunos -->
      <div class="estudante-div">
             <img class="estudante-imagem" src="mattheus.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 20</h3>
@@ -295,6 +298,7 @@ footer a {
             <img class="estudante-icone" src="instagram (1).png" alt="Instagram">
             <img class="estudante-icone" src="facebook (1).png" alt="Facebook">
         </div>
+    <!-- Repetir sessões com 6 alunos -->
      <div class="estudante-div">
             <img class="estudante-imagem" src="raul.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 27</h3>
@@ -331,6 +335,7 @@ footer a {
             <img class="estudante-icone" src="instagram (1).png" alt="Instagram">
             <img class="estudante-icone" src="facebook (1).png" alt="Facebook">
         </div>
+    <!-- Repetir sessões com 6 alunos -->
      <div class="estudante-div">
             <img class="estudante-imagem" src="thayna.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 33</h3>
@@ -361,6 +366,7 @@ footer a {
             <img class="estudante-icone" src="instagram (1).png" alt="Instagram">
             <img class="estudante-icone" src="facebook (1).png" alt="Facebook">
         </div>
+    <!-- Repetir sessões com 6 alunos -->
 <footer>
     <p>©2025 | Turma 2CDS | Unidos e vencedores!</p>
     <p>Contato: <a href="https://wa.me/5541999999999">Whatsapp da turma</a></p>
