--- a/index.html
+++ b/index.html
@@ -366,6 +366,12 @@ footer a {
             <img class="estudante-icone" src="instagram (1).png" alt="Instagram">
             <img class="estudante-icone" src="facebook (1).png" alt="Facebook">
         </div>
+    <div class="estudante-div">
+            <img class="estudante-imagem" src="gabriela.jpg" alt="Aluno 6">
+            <h3 class="estudante-nome">Aluno 38</h3>
+            <img class="estudante-icone" src="instagram (1).png" alt="Instagram">
+            <img class="estudante-icone" src="facebook (1).png" alt="Facebook">
+        </div>
     <!-- Repetir sessões com 6 alunos -->
 <footer>
     <p>©2025 | Turma 2CDS | Unidos e vencedores!</p>
