--- a/index.html
+++ b/index.html
@@ -249,13 +249,13 @@ footer a {
             <img class="estudante-icone" src="instagram (1).png" alt="Instagram">
             <img class="estudante-icone" src="facebook (1).png" alt="Facebook">
         </div>
+    <!-- Repetir sessões com 6 alunos -->
      <div class="estudante-div">
             <img class="estudante-imagem" src="matheus.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 19</h3>
             <img class="estudante-icone" src="instagram (1).png" alt="Instagram">
             <img class="estudante-icone" src="facebook (1).png" alt="Facebook">
         </div>
-    <!-- Repetir sessões com 6 alunos -->
      <div class="estudante-div">
             <img class="estudante-imagem" src="mattheus.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 20</h3>
@@ -286,6 +286,7 @@ footer a {
             <img class="estudante-icone" src="instagram (1).png" alt="Instagram">
             <img class="estudante-icone" src="facebook (1).png" alt="Facebook">
         </div>
+    <!-- Repetir sessões com 6 alunos -->
      <div class="estudante-div">
             <img class="estudante-imagem" src="paulo.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 25</h3>
@@ -298,7 +299,6 @@ footer a {
             <img class="estudante-icone" src="instagram (1).png" alt="Instagram">
             <img class="estudante-icone" src="facebook (1).png" alt="Facebook">
         </div>
-    <!-- Repetir sessões com 6 alunos -->
      <div class="estudante-div">
             <img class="estudante-imagem" src="raul.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 27</h3>
@@ -323,6 +323,7 @@ footer a {
             <img class="estudante-icone" src="instagram (1).png" alt="Instagram">
             <img class="estudante-icone" src="facebook (1).png" alt="Facebook">
         </div>
+    <!-- Repetir sessões com 6 alunos -->
      <div class="estudante-div">
             <img class="estudante-imagem" src="sophia.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 31</h3>
@@ -360,6 +361,7 @@ footer a {
             <img class="estudante-icone" src="instagram (1).png" alt="Instagram">
             <img class="estudante-icone" src="facebook (1).png" alt="Facebook">
         </div>
+    <!-- Repetir sessões com 6 alunos -->a
      <div class="estudante-div">
             <img class="estudante-imagem" src="wevergton.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 37</h3>
