--- a/index.html
+++ b/index.html
@@ -172,34 +172,31 @@ footer a {
         </div>
     </div>
     <!-- Repetir sessões com 6 alunos -->
+     <div class="estudantes_todos">
         <div class="estudante-div">
             <img class="estudante-imagem" src="gabriel.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 7</h3>
             <img class="estudante-icone" src="instagram (1).png" alt="Instagram">
             <img class="estudante-icone" src="facebook (1).png" alt="Facebook">
         </div>
-     </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 8</h3>
             <img class="estudante-icone" src="instagram (1).png" alt="Instagram">
             <img class="estudante-icone" src="facebook (1).png" alt="Facebook">
         </div>
-     </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="gian.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 9</h3>
             <img class="estudante-icone" src="instagram (1).png" alt="Instagram">
             <img class="estudante-icone" src="facebook (1).png" alt="Facebook">
         </div>
-     </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="joãocleberson.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 10</h3>
             <img class="estudante-icone" src="instagram (1).png" alt="Instagram">
             <img class="estudante-icone" src="facebook (1).png" alt="Facebook">
         </div>
-     </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="joãomozer.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 11</h3>
@@ -212,7 +209,9 @@ footer a {
             <img class="estudante-icone" src="instagram (1).png" alt="Instagram">
             <img class="estudante-icone" src="facebook (1).png" alt="Facebook">
         </div>
+        </div>
     <!-- Repetir sessões com 6 alunos -->
+     <div class="estudantes_todos">
      <div class="estudante-div">
             <img class="estudante-imagem" src="julio.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 13</h3>
@@ -249,7 +248,9 @@ footer a {
             <img class="estudante-icone" src="instagram (1).png" alt="Instagram">
             <img class="estudante-icone" src="facebook (1).png" alt="Facebook">
         </div>
+        </div>
     <!-- Repetir sessões com 6 alunos -->
+     <div class="estudantes_todos">
      <div class="estudante-div">
             <img class="estudante-imagem" src="matheus.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 19</h3>
@@ -286,7 +287,9 @@ footer a {
             <img class="estudante-icone" src="instagram (1).png" alt="Instagram">
             <img class="estudante-icone" src="facebook (1).png" alt="Facebook">
         </div>
+        </div>
     <!-- Repetir sessões com 6 alunos -->
+     <div class="estudantes_todos">
      <div class="estudante-div">
             <img class="estudante-imagem" src="paulo.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 25</h3>
@@ -323,7 +326,9 @@ footer a {
             <img class="estudante-icone" src="instagram (1).png" alt="Instagram">
             <img class="estudante-icone" src="facebook (1).png" alt="Facebook">
         </div>
+    </div>
     <!-- Repetir sessões com 6 alunos -->
+     <div class="estudantes_todos">
      <div class="estudante-div">
             <img class="estudante-imagem" src="sophia.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 31</h3>
@@ -361,7 +366,9 @@ footer a {
             <img class="estudante-icone" src="instagram (1).png" alt="Instagram">
             <img class="estudante-icone" src="facebook (1).png" alt="Facebook">
         </div>
-    <!-- Repetir sessões com 6 alunos -->a
+        </div>
+    <!-- Repetir sessões com 6 alunos -->
+     <div class="estudantes_todos">
      <div class="estudante-div">
             <img class="estudante-imagem" src="wevergton.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 37</h3>
@@ -373,6 +380,7 @@ footer a {
             <h3 class="estudante-nome">Aluno 38</h3>
             <img class="estudante-icone" src="instagram (1).png" alt="Instagram">
             <img class="estudante-icone" src="facebook (1).png" alt="Facebook">
+        </div>
         </div>
     <!-- Repetir sessões com 6 alunos -->
 <footer>
