--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ footer a {
 
 <body>
 <header>
-    <h1>Turma 2CDS</h1>
+    <h3>Turma 2CDS</h3>
     <p>A melhor turma da escola — Unidos sempre!</p>
 </header>
     <!-- Carrossel -->
@@ -190,13 +190,13 @@ footer a {
             <img class="estudante-icone" src="facebook (1).png" alt="Facebook">
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="aluno6.png" alt="Aluno 6">
+            <img class="estudante-imagem" src="gabriela.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 8</h3>
             <img class="estudante-icone" src="instagram (1).png" alt="Instagram">
             <img class="estudante-icone" src="facebook (1).png" alt="Facebook">
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="gian.jpg" alt="Aluno 6">
+            <img class="estudante-imagem" src="gianvictor.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 9</h3>
             <img class="estudante-icone" src="instagram (1).png" alt="Instagram">
             <img class="estudante-icone" src="facebook (1).png" alt="Facebook">
@@ -382,12 +382,6 @@ footer a {
      <div class="estudante-div">
             <img class="estudante-imagem" src="wevergton.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 37</h3>
-            <img class="estudante-icone" src="instagram (1).png" alt="Instagram">
-            <img class="estudante-icone" src="facebook (1).png" alt="Facebook">
-        </div>
-    <div class="estudante-div">
-            <img class="estudante-imagem" src="gabriela.jpg" alt="Aluno 6">
-            <h3 class="estudante-nome">Aluno 38</h3>
             <img class="estudante-icone" src="instagram (1).png" alt="Instagram">
             <img class="estudante-icone" src="facebook (1).png" alt="Facebook">
         </div>
