--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@ footer a {
             <img class="estudante-icone" src="facebook (1).png" alt="Facebook">
         </div>
         </div>
+
         <div class="estudante-div">
             <img class="estudante-imagem" src="chistofer.jpg" alt="Aluno 4">
             <h3 class="estudante-nome">Aluno 4</h3>
@@ -183,6 +184,7 @@ footer a {
         
     </div>
     </div>
+
     <!-- Repetir sessões com 6 alunos -->
      <div class="estudantes_todos">
         <div class="estudante-div">
@@ -203,6 +205,8 @@ footer a {
             <img class="estudante-icone" src="instagram (1).png" alt="Instagram">
             <img class="estudante-icone" src="facebook (1).png" alt="Facebook">
         </div>
+         </div>
+
         <div class="estudante-div">
             <img class="estudante-imagem" src="joãocleberson.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 10</h3>
@@ -221,6 +225,8 @@ footer a {
             <img class="estudante-icone" src="instagram (1).png" alt="Instagram">
             <img class="estudante-icone" src="facebook (1).png" alt="Facebook">
         </div>
+         </div>
+
         </div>
     <!-- Repetir sessões com 6 alunos -->
      <div class="estudantes_todos">
@@ -242,6 +248,8 @@ footer a {
             <img class="estudante-icone" src="instagram (1).png" alt="Instagram">
             <img class="estudante-icone" src="facebook (1).png" alt="Facebook">
         </div>
+         </div>
+
      <div class="estudante-div">
             <img class="estudante-imagem" src="marcus.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 16</h3>
@@ -261,6 +269,7 @@ footer a {
             <img class="estudante-icone" src="facebook (1).png" alt="Facebook">
         </div>
         </div>
+        
     <!-- Repetir sessões com 6 alunos -->
      <div class="estudantes_todos">
      <div class="estudante-div">
