--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ footer a {
 <body>
 <header>
     <h1>Turma 2CDS</h1>
-   <h2> <p>A melhor turma da escola — Unidos sempre!</p>
+   <h2> <p>A melhor turma da escola — Unidos sempre!</p> </h2>
 </header>
     <!-- Carrossel -->
 <div class="carousel">
