--- a/index.html
+++ b/index.html
@@ -162,6 +162,8 @@ footer a {
             <img class="estudante-icone" src="instagram (1).png" alt="Instagram">
             <img class="estudante-icone" src="facebook (1).png" alt="Facebook">
         </div>
+        </div>
+        <div class="estudantes_todos">
         <div class="estudante-div">
             <img class="estudante-imagem" src="chistofer.jpg" alt="Aluno 4">
             <h3 class="estudante-nome">Aluno 4</h3>
@@ -195,14 +197,13 @@ footer a {
             <img class="estudante-icone" src="instagram (1).png" alt="Instagram">
             <img class="estudante-icone" src="facebook (1).png" alt="Facebook">
         </div>
+         <div class="estudantes_todos">
         <div class="estudante-div">
             <img class="estudante-imagem" src="gianvictor.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 9</h3>
             <img class="estudante-icone" src="instagram (1).png" alt="Instagram">
             <img class="estudante-icone" src="facebook (1).png" alt="Facebook">
         </div>
-         </div>
-
         <div class="estudante-div">
             <img class="estudante-imagem" src="joãocleberson.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 10</h3>
@@ -215,13 +216,14 @@ footer a {
             <img class="estudante-icone" src="instagram (1).png" alt="Instagram">
             <img class="estudante-icone" src="facebook (1).png" alt="Facebook">
         </div>
+        </div>
+        <div class="estudantes_todos">
      <div class="estudante-div">
             <img class="estudante-imagem" src="julia.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 12</h3>
             <img class="estudante-icone" src="instagram (1).png" alt="Instagram">
             <img class="estudante-icone" src="facebook (1).png" alt="Facebook">
         </div>
-         </div>
 
         </div>
     <!-- Repetir sessões com 6 alunos -->
@@ -245,7 +247,7 @@ footer a {
             <img class="estudante-icone" src="facebook (1).png" alt="Facebook">
         </div>
          </div>
-
+<div class="estudantes_todos">
      <div class="estudante-div">
             <img class="estudante-imagem" src="marcus.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 16</h3>
@@ -286,6 +288,8 @@ footer a {
             <img class="estudante-icone" src="instagram (1).png" alt="Instagram">
             <img class="estudante-icone" src="facebook (1).png" alt="Facebook">
         </div>
+        </div>
+        <div class="estudantes_todos">
      <div class="estudante-div">
             <img class="estudante-imagem" src="milena.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 22</h3>
@@ -325,6 +329,8 @@ footer a {
             <img class="estudante-icone" src="instagram (1).png" alt="Instagram">
             <img class="estudante-icone" src="facebook (1).png" alt="Facebook">
         </div>
+        </div>
+        <div class="estudantes_todos">
      <div class="estudante-div">
             <img class="estudante-imagem" src="rebecca.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 28</h3>
@@ -365,6 +371,8 @@ footer a {
             <img class="estudante-icone" src="instagram (1).png" alt="Instagram">
             <img class="estudante-icone" src="facebook (1).png" alt="Facebook">
         </div>
+        </div>
+        <div class="estudantes_todos">
      <div class="estudante-div">
             <img class="estudante-imagem" src="vicente.jpg" alt="Aluno 6">
             <h3 class="estudante-nome">Aluno 34</h3>
