--- a/index.html
+++ b/index.html
@@ -125,9 +125,15 @@ footer a {
 
 <body>
 <header>
+      <div class="header-container">
+        <img src="images.png" class="logo">
+        <div class="header-text">
     <h1>Turma 2CDS</h1>
    <h2> <p>A melhor turma da escola — Unidos sempre!</p> </h2>
+   </div>
+   </div>
 </header>
+
     <!-- Carrossel -->
 <div class="carousel">
     <img src="foto da turma.jpg" class="active" alt="Foto da turma 1">
