--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@ footer a {
 <body>
 <header>
       <div class="header-container">
-        <img src="images.png" class="logo">
-        <div class="header-text">
+    <img src="images.png" alt="Logo da Escola" class="logo">
+    <div class="header-text">
     <h1>Turma 2CDS</h1>
    <h2> <p>A melhor turma da escola — Unidos sempre!</p> </h2>
    </div>
@@ -442,7 +442,7 @@ footer a {
 </div>
 </section>
 <footer>
-    
+
     <p>©2025 | Turma 2CDS | Unidos e vencedores!</p>
     <p>Contato: <a href="https://wa.me/5541999999999">Whatsapp da turma</a></p>
 </footer>
