--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ footer a {
 </div>
 
 <div class="estudante-div">
-<img class="estudante-imagem" src="aluno6.png" alt="Aluno 15">
+<img class="estudante-imagem" src="luan.png" alt="Aluno 15">
 <h3 class="estudante-nome">Aluno 15</h3>
 <img class="estudante-icone" src="instagram (1).png" alt="Instagram">
 <img class="estudante-icone" src="facebook (1).png" alt="Facebook">
