--- a/index.html
+++ b/index.html
@@ -35,6 +35,18 @@ header p {
 }
 
 /* Seção Alunos */
+
+/* style.css */
+
+/* Aplica a todas as imagens */
+img {
+  width: 300px;      /* largura fixa */
+  height: 200px;     /* altura fixa */
+  object-fit: cover; /* mantém a proporção, sem distorcer */
+  border-radius: 0;  /* remove arredondamento (fica retangular) */
+  display: block;
+}
+  
 .estudante {
     padding: 40px 20px;
     background: #fff;
