--- a/index.html
+++ b/index.html
@@ -130,6 +130,26 @@ footer a {
       <div class="header-container">
     <img src="images.png" alt="Logo da Escola" class="logo">
     <div class="header-text">
+        <style>
+  .flex-container {
+
+    display: flex;
+    
+    justify-content: flex-start; 
+    align-items: flex-start;    
+
+    background-color: #bbdefb;
+    height: 100%;
+    padding: 15px;
+    gap: 5px;
+
+  }
+
+  .flex-container > div{
+    background: #ffecb3;
+    border: 3px solid #ffcc80;
+    border-radius: 5px;
+    padding: 8px;
     <h1>Turma 2CDS</h1>
    <h2> <p>A melhor turma da escola — Unidos sempre!</p> </h2>
    </div>
