--- a/index.html
+++ b/index.html
@@ -5,124 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Nossa Turma | Melhor da Escola</title>
 
-<style>
-/* ---------- ESTILOS GERAIS ---------- */
+<link rel="stylesheet" href="style.css">
 
-* {
-  box-sizing: border-box;
-}
-body {
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #f9f9f9;
-    color: #000;
-}
-
-/* Cabeçalho */
-header {
-    background: linear-gradient(90deg, #002244, #0055aa);
-    color: #fff;
-    padding: 20px;
-    text-align: center;
-}
-header h1 {
-    margin: 10px 0 0 0;
-    font-size: 2.5rem;
-}
-header p {
-    font-size: 1.2rem;
-    font-weight: bold;
-}
-
-/* Seção Alunos */
-  
-
-.estudante {
-    padding: 40px 20px;
-    background: #fff;
-    margin: 20px;
-    border-radius: 15px;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-}
-.estudante_titulo {
-    text-align: center;
-    color: #002244;
-    font-size: 2rem;
-    margin-bottom: 20px;
-}
-.estudantes_todos {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 25px;
-}
-.estudante-div {
-    background: #e6f0ff;
-    border-radius: 12px;
-    padding: 15px;
-    text-align: center;
-    transition: transform 0.3s;
-}
-.estudante-div:hover {
-    transform: scale(1.05);
-}
-.estudante-imagem {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-}
-.estudante-nome {
-    margin: 10px 0;
-    font-size: 1.2rem;
-    color: #000;
-}
-.estudante-icone {
-    width: 25px;
-    margin: 5px;
-}
-
-/* Carrossel */
-.carousel {
-    position: relative;
-    max-width: 80%;
-    margin: 40px auto;
-    overflow: hidden;
-    border-radius: 15px;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-}
-.carousel img {
-    width: 100%;
-    display: none;
-}
-.carousel img.active {
-    display: block;
-}
-.carousel button {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background: rgba(0,0,0,0.6);
-    color: white;
-    border: none;
-    padding: 10px 15px;
-    cursor: pointer;
-}
-.carousel .prev { left: 10px; }
-.carousel .next { right: 10px; }
-
-
-
-/* Rodapé */
-footer {
-    background: #002244;
-    color: white;
-    text-align: center;
-    padding: 20px;
-}
-footer a {
-    color: #00ccff;
-    text-decoration: none;
-}
-</style>
 </head>
 
 <body>
@@ -131,11 +15,6 @@ footer a {
     <img src="images.png" alt="Logo da Escola" class="logo">
     <div class="header-text">
        
-            
-    background: #ffecb3;
-    border: 3px solid #ffcc80;
-    border-radius: 5px;
-    padding: 8px;
     <h1>Turma 2CDS</h1>
    <h2> <p>A melhor turma da escola — Unidos sempre!</p> </h2>
    </div>
